--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -38,19 +38,8 @@
     "from neural_decoder.bit import BiT_Phoneme\n",
     "import pickle\n",
     "import argparse\n",
-    "from lm_utils import _cer_and_wer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MODEL_CACHE_DIR = \"/data/willett_data/llama\"\n",
-    "llm, llm_tokenizer = lmDecoderUtils.build_opt(\n",
-    "cacheDir=MODEL_CACHE_DIR, device=\"auto\", load_in_8bit=True\n",
-    ")"
+    "from lm_utils import _cer_and_wer\n",
+    "import json"
    ]
   },
   {
@@ -73,11 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "output_file = 'obi'\n",
+    "output_file = 'leia'\n",
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
     "if output_file == 'obi':\n",
@@ -85,18 +82,18 @@
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "    \n",
-    "device = 'cuda:0'\n",
+    "device = 'cuda:2'\n",
     "load_lm = True\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
     "blank_penalty = np.log(2)\n",
     "\n",
-    "test_with_llm = True\n",
+    "not_loaded = True\n",
+    "run_for_llm = True \n",
     "\n",
-    "if test_with_llm:\n",
+    "if run_for_llm:\n",
     "    rescore_n_best = True\n",
     "    rescore = True\n",
-    "    llm_weight = 0.5\n",
     "else:\n",
     "    rescore_n_best = False\n",
     "    rescore = False"
@@ -104,11 +101,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded LM\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
+      "I0509 19:44:00.022398 1215704 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0509 19:46:43.590945 1215704 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "if load_lm: \n",
+    "if load_lm and not_loaded: \n",
     "        \n",
     "    lmDir = base_dir +'/lm/languageModel'\n",
     "    ngramDecoder = lmDecoderUtils.build_lm_decoder(\n",
@@ -117,7 +131,9 @@
     "        nbest=1,\n",
     "        beam=18\n",
     "    )\n",
-    "    print(\"loaded LM\")"
+    "    print(\"loaded LM\")\n",
+    "    \n",
+    "not_loaded = False"
    ]
   },
   {
@@ -131,56 +147,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading GRU\n"
+      "/data/willett_data/ptDecoder_ctc_both\n",
+      "Loading TRANSFORMER\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1143292/1382384046.py:145: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1215704/1232048485.py:151: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model performance:  0.2184804589162643\n",
-      "N-gram decoding took 0.08480333469130776 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (0.1512366977808448, 0.14072161265911193, 0.16212402124336683) (0.20531005637388616, 0.19118545381086435, 0.22002661907244062)\n"
      ]
     }
    ],
    "source": [
-    "models_to_run = ['neurips_gru_baseline_seed_2']\n",
+    "models_to_run = [f'neurips_transformer_time_masked_seed_{i}' for i in range(1)]\n",
     "partition = \"test\" # \"test\"\n",
     "fill_max_day = False\n",
     "\n",
-    "for model in models_to_run:\n",
+    "if partition == 'test':\n",
+    "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions/\"\n",
+    "else:\n",
+    "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions_comp/\"\n",
     "    \n",
-    "    modelPath = f\"{model_storage_path}{model}\"\n",
+    "for model_name_str in models_to_run:\n",
+    "    \n",
+    "    modelPath = f\"{model_storage_path}{model_name_str}\"\n",
     "    \n",
     "    with open(modelPath + \"/args\", \"rb\") as handle:\n",
     "        args = pickle.load(handle)\n",
     "    \n",
     "    \n",
-    "    if args['datasetPath'] == 'data_log_both':\n",
-    "        data_file = 'ptDecoder_ctc_both'\n",
-    "    elif args['datasetPath'] == 'data':\n",
-    "        data_file = 'ptDecoder_ctc'\n",
+    "    if args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both':\n",
+    "        data_file = '/data/willett_data/ptDecoder_ctc_both'\n",
+    "    elif args['datasetPath'].rsplit('/', 1)[-1] == 'data':\n",
+    "        data_file = '/data/willett_data/ptDecoder_ctc'\n",
     "    else:\n",
     "        data_file = args['datasetPath']\n",
+    "        \n",
+    "    print(data_file)\n",
     "    \n",
     "    trainLoaders, testLoaders, loadedData = getDatasetLoaders(\n",
-    "        args[\"datasetPath\"], 8\n",
+    "        data_file, 8\n",
     "    )\n",
     "    \n",
     "    # if true, model is a GRU\n",
@@ -355,39 +370,17 @@
     "                \n",
     "            time_per_sample = (time.time() - start_t) / len(model_outputs[\"logits\"])\n",
     "            print(f\"N-gram decoding took {time_per_sample} seconds per sample\")\n",
-    "\n",
-    "            if test_with_llm:\n",
+    "            \n",
+    "            if run_for_llm:\n",
     "                \n",
-    "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
-    "                    new_trans = [ord(c) for c in model_outputs[\"transcriptions\"][i]] + [0]\n",
-    "                    model_outputs[\"transcriptions\"][i] = np.array(new_trans)\n",
+    "                with open(f\"{saveFolder_transcripts}transcript.pkl\", \"wb\") as f:\n",
+    "                    pickle.dump(model_outputs[\"transcriptions\"], f)\n",
     "                    \n",
-    "                # Rescore nbest outputs with LLM\n",
-    "                start_t = time.time()\n",
-    "                llm_out = lmDecoderUtils.cer_with_gpt2_decoder(\n",
-    "                    llm,\n",
-    "                    llm_tokenizer,\n",
-    "                    nbest_outputs[:],\n",
-    "                    acoustic_scale,\n",
-    "                    model_outputs,\n",
-    "                    outputType=\"speech_sil\",\n",
-    "                    returnCI=True,\n",
-    "                    lengthPenalty=0,\n",
-    "                    alpha=llm_weight,\n",
-    "                )\n",
-    "                # time_per_sample = (time.time() - start_t) / len(logits)\n",
-    "                print(f\"LLM decoding took {time_per_sample} seconds per sample\")\n",
-    "\n",
-    "                #print(llm_out[\"cer\"], llm_out[\"wer\"])\n",
-    "                #with open(input_args.modelPath + \"/llm_out\", \"wb\") as handle:\n",
-    "                #    pickle.dump(llm_out, handle)\n",
-    "\n",
-    "                decodedTranscriptions = llm_out[\"decoded_transcripts\"]\n",
-    "                #with open(input_args.modelPath + \"/5gramLLMCompetitionSubmission.txt\", \"w\") as f:\n",
-    "                #    for x in range(len(decodedTranscriptions)):\n",
-    "                #        f.write(decodedTranscriptions[x] + \"\\n\")\n",
-    "            else:\n",
+    "                with open(f\"{saveFolder_transcripts}{model_name_str}.pkl\", \"wb\") as f:\n",
+    "                    pickle.dump(nbest_outputs, f)\n",
     "                \n",
+    "            else:\n",
+    "                # just get perf with greedy decoding\n",
     "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
     "                    model_outputs[\"transcriptions\"][i] = model_outputs[\"transcriptions\"][i].strip()\n",
     "                    nbest_outputs[i] = nbest_outputs[i].strip()\n",
