--- a/src/neural_decoder/lm_logging.ipynb
+++ b/src/neural_decoder/lm_logging.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "batch_size=8\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2830,7 +2839,7 @@
     "        model, args = loadTransformerModel(fullPath)\n",
     "        model = model.to(device)\n",
     "        all_logits, trial_lengths, avgDayLoss, cer = run_forward(model, compLoader, device)\n",
-    "        \n",
+    "        –\n",
     "    else:\n",
     "        model, args = loadModel(fullPath, device=device)\n",
     "        model = model.to(device)\n",
