--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import time\n",
@@ -54,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = 'leia'\n",
+    "output_file = 'obi'\n",
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
     "if output_file == 'obi':\n",
@@ -100,8 +109,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0509 21:33:02.155946 1242037 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0509 21:35:28.706274 1242037 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0509 22:41:11.173261 1260730 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0509 22:43:38.411578 1260730 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +148,9 @@
      "output_type": "stream",
      "text": [
       "Writing to shared output file\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "gru_restricted_days_seed_0\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n"
      ]
     },
@@ -148,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1242037/112148644.py:173: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1260730/93088782.py:176: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -156,83 +166,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model performance:  2.6503125\n",
-      "N-gram decoding took 0.01642657518386841 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.905625, 2.8021875, 3.0103203124999998) (2.87125, 2.7725, 2.96875)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "Model performance:  0.2801639636428444\n",
+      "gru_restricted_days_seed_0\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
+      "Model performance:  0.30942282869260557\n",
+      "gru_restricted_days_seed_0\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
+      "Model performance:  0.2777777777777778\n",
+      "gru_restricted_days_seed_1\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  2.6765625\n",
-      "N-gram decoding took 0.016431331634521484 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.9284375, 2.82625, 3.0328125) (2.89375, 2.79246875, 2.99375)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "Model performance:  0.28123329174835143\n",
+      "gru_restricted_days_seed_1\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
+      "Model performance:  0.31421722293933246\n",
+      "gru_restricted_days_seed_1\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
+      "Model performance:  0.2757697456492637\n",
+      "gru_restricted_days_seed_2\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  2.6634375\n",
-      "N-gram decoding took 0.016739054322242736 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.915, 2.81375, 3.0184375) (2.88, 2.78125, 2.98125)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "Model performance:  0.2792728568882552\n",
+      "gru_restricted_days_seed_2\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
+      "Model performance:  0.3162456205052554\n",
+      "gru_restricted_days_seed_2\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
+      "Model performance:  0.2782797858099063\n",
+      "gru_restricted_days_seed_3\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  2.650625\n",
-      "N-gram decoding took 0.01705417811870575 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.9221875, 2.8234296875, 3.024375) (2.88125, 2.7825, 2.98125)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "Model performance:  0.2796292995900909\n",
+      "gru_restricted_days_seed_3\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  2.93125\n",
-      "N-gram decoding took 0.018348076939582826 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.15375, 3.0431171875, 3.2690703125) (3.14125, 3.03625, 3.25)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  2.9809375\n",
-      "N-gram decoding took 0.01767784118652344 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1903125, 3.0778046875, 3.3065625) (3.15, 3.0475, 3.255)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  2.948125\n",
-      "N-gram decoding took 0.017848839163780213 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1771875, 3.0646875, 3.290625) (3.155, 3.04875, 3.26)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  2.9428125\n",
-      "N-gram decoding took 0.017650129199028017 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1784375, 3.065, 3.291875) (3.15125, 3.04625, 3.25875)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
+      "Model performance:  0.311820025815969\n",
+      "gru_restricted_days_seed_3\n",
+      "/data/willett_data/ptDecoder_ctc\n",
+      "Loading GRU\n",
       "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  2.98375\n",
-      "N-gram decoding took 0.016851125359535216 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2815625, 3.1775, 3.3865625) (3.27, 3.17, 3.36875)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  2.96875\n",
-      "N-gram decoding took 0.01692232608795166 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2759375, 3.1696796875000004, 3.3815625) (3.2625, 3.1625, 3.36125)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  2.963125\n",
-      "N-gram decoding took 0.016916476488113404 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.258125, 3.15625, 3.3609453124999997) (3.265, 3.16625, 3.3637812499999997)\n",
-      "/data/willett_data/ptDecoder_ctc_both\n",
-      "Loading TRANSFORMER\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  2.96375\n",
-      "N-gram decoding took 0.017389212250709534 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2675, 3.1625, 3.3690625) (3.26, 3.15871875, 3.3575)\n"
+      "Model performance:  0.2791164658634538\n"
      ]
     }
    ],
    "source": [
-    "models_to_run = ['neurips_transformer_restricted_days_3', 'neurips_transformer_restricted_days_2',\n",
-    "                 'neurips_transformer_time_masked_restricted_days']\n",
+    "models_to_run = ['neurips_gru_restricted_days_3', 'neurips_gru_restricted_days_2',\n",
+    "                 'neurips_gru_restricted_days']\n",
     "\n",
-    "shared_output_file = 'transformer_restricted_days'\n",
+    "shared_output_file = 'gru_restricted_days'\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    print(\"Writing to shared output file\")\n",
@@ -250,14 +247,15 @@
     "else:\n",
     "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions_comp/\"\n",
     "    \n",
-    "for model_name_str in models_to_run:\n",
+    "for seed in range(seeds):\n",
     "    \n",
-    "    for seed in range(seeds):\n",
+    "    for model_name_str in models_to_run:\n",
     "        \n",
     "        modelPath = f\"{model_storage_path}{model_name_str}_seed_{seed}\"\n",
     "        \n",
     "        if len(shared_output_file) > 0:\n",
     "            output_file = f\"{shared_output_file}_seed_{seed}\"\n",
+    "            print(output_file)\n",
     "        else:\n",
     "            output_file = f\"{model_name_str}_seed_{seed}\"\n",
     "            \n",
@@ -295,7 +293,7 @@
     "                layer_dim=args[\"nLayers\"],\n",
     "                nDays=args['nDays'],\n",
     "                dropout=args[\"dropout\"],\n",
-    "                device=args[\"device\"],\n",
+    "                device=device,\n",
     "                strideLen=args[\"strideLen\"],\n",
     "                kernelLen=args[\"kernelLen\"],\n",
     "                gaussianSmoothWidth=args[\"gaussianSmoothWidth\"],\n",
@@ -337,6 +335,7 @@
     "            \n",
     "        ckpt_path = modelPath + '/modelWeights'\n",
     "        model.load_state_dict(torch.load(ckpt_path, map_location=device), strict=True)\n",
+    "        model = model.to(device)\n",
     "        \n",
     "        model.eval()\n",
     "\n",
@@ -362,8 +361,9 @@
     "            \n",
     "            for i, testDayIdx in enumerate(testDayIdxs):\n",
     "                \n",
-    "                if testDayIdx not in args['restricted_days']:\n",
-    "                    continue\n",
+    "                if len(args['restricted_days']) > 0:\n",
+    "                    if testDayIdx not in args['restricted_days']:\n",
+    "                        continue\n",
     "                    \n",
     "                test_ds = SpeechDataset([loadedData[partition][i]])\n",
     "                test_loader = torch.utils.data.DataLoader(\n",
@@ -382,7 +382,7 @@
     "                    \n",
     "                    if fill_max_day:\n",
     "                        dayIdx.fill_(args['maxDay'])\n",
-    "                    \n",
+    "                        \n",
     "                    pred = model.forward(X, X_len, dayIdx)\n",
     "                    \n",
     "                    if hasattr(model, 'compute_length'):\n",
@@ -480,129 +480,9 @@
     "                    out_file = os.path.join(saveFolder_transcripts, output_file)   # no extension per your spec\n",
     "                    \n",
     "                    with open(out_file + '.txt', write_mode, encoding=\"utf-8\") as f:\n",
-    "                        f.write(\"\\n\".join(nbest_outputs))   # one line per LLM output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "write_mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15, 16, 17, 18, 19, 20]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(args['restricted_days'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hello'"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = 'helLo.'\n",
-    "convert_sentence(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'outputDir': '/data/willett_data/outputs/neurips_transformer_time_masked_seed_3',\n",
-       " 'datasetPath': '/data/willett_data/ptDecoder_ctc_both',\n",
-       " 'modelName': 'neurips_transformer_time_masked_seed_3',\n",
-       " 'testing_on_held_out': False,\n",
-       " 'maxDay': 15,\n",
-       " 'restricted_days': [],\n",
-       " 'patch_size': (5, 256),\n",
-       " 'dim': 384,\n",
-       " 'depth': 7,\n",
-       " 'heads': 6,\n",
-       " 'mlp_dim_ratio': 4,\n",
-       " 'dim_head': 64,\n",
-       " 'T5_style_pos': True,\n",
-       " 'nClasses': 40,\n",
-       " 'whiteNoiseSD': 0.2,\n",
-       " 'gaussianSmoothWidth': 2.0,\n",
-       " 'constantOffsetSD': 0.05,\n",
-       " 'num_masks': 20,\n",
-       " 'max_mask_pct': 0.075,\n",
-       " 'l2_decay': 1e-05,\n",
-       " 'input_dropout': 0.2,\n",
-       " 'dropout': 0.35,\n",
-       " 'AdamW': True,\n",
-       " 'learning_scheduler': 'multistep',\n",
-       " 'gamma': 0.1,\n",
-       " 'lrStart': 0.001,\n",
-       " 'lrEnd': 0.001,\n",
-       " 'batchSize': 64,\n",
-       " 'beta1': 0.9,\n",
-       " 'beta2': 0.999,\n",
-       " 'n_epochs': 600,\n",
-       " 'milestones': [400],\n",
-       " 'look_ahead': 0,\n",
-       " 'extra_notes': '',\n",
-       " 'device': 'cuda:0',\n",
-       " 'seed': 3,\n",
-       " 'load_pretrained_model': '',\n",
-       " 'mask_token_zero': False}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "args"
+    "                        f.write(\"\\n\".join(nbest_outputs)+ \"\\n\")   # one line per LLM output\n",
+    "                        \n",
+    "                    "
    ]
   },
   {
