--- a/src/neural_decoder/lm_rescore.ipynb
+++ b/src/neural_decoder/lm_rescore.ipynb
@@ -2,87 +2,136 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f12e6869eb22400cbd7520c4d818f06e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+      "/home3/ebrahim2/miniconda3/envs/llm_decode/lib/python3.9/site-packages/transformers/generation/configuration_utils.py:631: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct this sentence: 'he go to store yesterday' \n",
-      "The correct sentence is: 'he went to the store yesterday.'\n",
-      "\n",
-      "The change was made to the verb 'go' to the past tense 'went' instead of the past participle 'go'.\n"
+      "Correct this sentence: He were the best. He was the best.\n",
+      "Answer: He was the best.\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Quick‑start: Phi‑2 for N‑best rescoring or generation\n",
+    "----------------------------------------------------------------\n",
+    "• Model repo :  microsoft/phi-2\n",
+    "• Context    :  4 k tokens\n",
+    "• Dtype      :  fp16 recommended\n",
+    "----------------------------------------------------------------\n",
+    "\"\"\"\n",
+    "\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "import torch, os, numpy as np\n",
     "\n",
-    "model_name = \"meta-llama/Llama-3.2-1B-Instruct\"\n",
+    "# ── config ────────────────────────────────────────────────────\n",
+    "device      = \"cuda:2\"              # GPU to use\n",
+    "model_name  = \"microsoft/phi-2\"     # <-- swapped in Phi‑2\n",
+    "dtype       = torch.float16         # fp16 is plenty for scoring\n",
+    "# ──────────────────────────────────────────────────────────────\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"   # kill the fork warning\n",
+    "\n",
+    "# Phi‑2 uses a custom tokenizer implementation, so add trust_remote_code\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    model_name,\n",
+    "    trust_remote_code=True\n",
+    ")\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_name,\n",
-    "    device_map=\"auto\",\n",
-    "    torch_dtype=\"auto\"\n",
+    "    device_map       = device,      # let HF shard onto the chosen GPU\n",
+    "    torch_dtype      = dtype,\n",
+    "    trust_remote_code=True\n",
     ")\n",
     "\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\"\n",
+    "# ensure padding token exists (Phi‑2 shares EOS + PAD = \"<|endoftext|>\")\n",
+    "tokenizer.pad_token     = tokenizer.eos_token\n",
+    "tokenizer.padding_side  = \"right\"\n",
     "\n",
-    "# Test generation\n",
-    "prompt = \"Correct this sentence: 'he go to store yesterday'\"\n",
-    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
-    "output = model.generate(**inputs, max_new_tokens=50)\n",
-    "print(tokenizer.decode(output[0], skip_special_tokens=True))"
+    "# ── quick test ────────────────────────────────────────────────\n",
+    "prompt  = \"Correct this sentence: He were the best.\"\n",
+    "inputs  = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "# guidance: use temperature 0 & greedy decoding for grammar correction\n",
+    "output_ids = model.generate(\n",
+    "    **inputs,\n",
+    "    max_new_tokens = 50,\n",
+    "    temperature    = 0.0,\n",
+    ")\n",
+    "print(tokenizer.decode(output_ids[0], skip_special_tokens=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "transcript_path_test = \"/data/willett_data/model_transcriptions/neurips_transformer_time_masked_seed_0.json\"\n",
-    "with open(transcript_path_test) as f:\n",
-    "    model_outputs = json.load(f)"
+    "from llm_utils import cer_with_gpt2_decoder\n",
+    "import time\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "seed_list = [0]\n",
+    "acoustic_scale = 0.8\n",
+    "llm_weight = 0.7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUNNING FOR:  neurips_transformer_time_masked_seed_0\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c43f380aa44940b89917a90e630bb57d",
+       "model_id": "7e985ea879d5467d9a3b2e9d7b1f748d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+       "  0%|          | 0/880 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -90,80 +139,99 @@
     }
    ],
    "source": [
-    "from huggingface_hub import login\n",
-    "login()"
+    "for seed in seed_list:\n",
+    "    saved_dir = '/data/willett_data/model_transcriptions/'\n",
+    "    model_name_str = f'neurips_transformer_time_masked_seed_{seed}'\n",
+    "    \n",
+    "    print(\"RUNNING FOR: \", model_name_str)\n",
+    "    \n",
+    "    nbest_path = f\"{saved_dir}{model_name_str}_nbest.pkl\"\n",
+    "    with open(nbest_path, mode = 'rb') as f:\n",
+    "        nbest = pickle.load(f)\n",
+    "        \n",
+    "    model_outputs_path = f\"{saved_dir}{model_name_str}_model_outputs.pkl\"\n",
+    "    with open(model_outputs_path, mode = 'rb') as f:\n",
+    "        model_outputs = pickle.load(f)\n",
+    "        \n",
+    "    for i in range(len(model_outputs['transcriptions'])):\n",
+    "        new_trans = [ord(c) for c in model_outputs['transcriptions'][i]] + [0]\n",
+    "        model_outputs['transcriptions'][i] = np.array(new_trans)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    # Rescore nbest outputs with LLM\n",
+    "    start_t = time.time()\n",
+    "    llm_out = cer_with_gpt2_decoder(\n",
+    "        model,\n",
+    "        tokenizer,\n",
+    "        nbest[:],\n",
+    "        acoustic_scale,\n",
+    "        model_outputs,\n",
+    "        outputType=\"speech_sil\",\n",
+    "        returnCI=True,\n",
+    "        lengthPenalty=0,\n",
+    "        alpha=llm_weight,\n",
+    "    )\n",
+    "\n",
+    "    with open(saved_dir + f\"{model_name_str}_llm_outs.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(\"\\n\".join(llm_out['decoded_transcripts'])+ \"\\n\")   # one line per LLM output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def build_llama_1B(modelName=\"meta-llama/Llama-3.2-1B-Instruct\",\n",
-    "                cacheDir=None,\n",
-    "                device=\"auto\",\n",
-    "                load_in_8bit=False,\n",
-    "                auth_token=True,        # NEW: pass your HF token for the gated repo\n",
-    "                dtype=\"auto\"):          # NEW: pick bfloat16/float16 automatically\n",
-    "   \n",
-    "\n",
-    "    # 1 Load tokenizer\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        modelName,\n",
-    "        cache_dir=cacheDir,\n",
-    "        token=auth_token          # required after you’ve accepted Meta’s license\n",
-    "    )\n",
-    "\n",
-    "    # 2 Load model\n",
-    "    torch_dtype = {\"auto\": None,\n",
-    "                   \"bf16\": torch.bfloat16,\n",
-    "                   \"fp16\": torch.float16}.get(dtype, None)\n",
-    "\n",
-    "    model = AutoModelForCausalLM.from_pretrained(\n",
-    "        modelName,\n",
-    "        cache_dir=cacheDir,\n",
-    "        device_map=device,        # \"auto\", \"cpu\", \"cuda\", or explicit dict\n",
-    "        load_in_8bit=load_in_8bit,\n",
-    "        token=auth_token,\n",
-    "        torch_dtype=torch_dtype   # saves VRAM if you pick bf16/fp16\n",
-    "    )\n",
-    "\n",
-    "    # 3 Padding tweaks (Llama uses no official pad token)\n",
-    "    if tokenizer.pad_token is None:\n",
-    "        tokenizer.pad_token = tokenizer.eos_token\n",
-    "    tokenizer.padding_side = \"right\"\n",
-    "    model.config.pad_token_id = tokenizer.pad_token_id\n",
-    "\n",
-    "    return model, tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "Can't load tokenizer for 'meta-llama/Llama-3.2-1B-Instruct'. If you were trying to load it from 'https://huggingface.co/models', make sure you don't have a local directory with the same name. Otherwise, make sure 'meta-llama/Llama-3.2-1B-Instruct' is the correct path to a directory containing all relevant files for a LlamaTokenizerFast tokenizer.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m MODEL_CACHE_DIR \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/data/willett_data/llama\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m llm, llm_tokenizer \u001b[39m=\u001b[39m build_llama_1B(\n\u001b[1;32m      3\u001b[0m cacheDir\u001b[39m=\u001b[39;49mMODEL_CACHE_DIR, device\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mauto\u001b[39;49m\u001b[39m\"\u001b[39;49m, load_in_8bit\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m\n\u001b[1;32m      4\u001b[0m )\n",
-      "Cell \u001b[0;32mIn[5], line 10\u001b[0m, in \u001b[0;36mbuild_llama_1B\u001b[0;34m(modelName, cacheDir, device, load_in_8bit, auth_token, dtype)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m\u001b[39m \u001b[39m\u001b[39mbuild_llama_1B\u001b[39m(modelName\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmeta-llama/Llama-3.2-1B-Instruct\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      2\u001b[0m                 cacheDir\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m      3\u001b[0m                 device\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \n\u001b[1;32m      9\u001b[0m     \u001b[39m# 1 Load tokenizer\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     tokenizer \u001b[39m=\u001b[39m AutoTokenizer\u001b[39m.\u001b[39;49mfrom_pretrained(\n\u001b[1;32m     11\u001b[0m         modelName,\n\u001b[1;32m     12\u001b[0m         cache_dir\u001b[39m=\u001b[39;49mcacheDir,\n\u001b[1;32m     13\u001b[0m         token\u001b[39m=\u001b[39;49mauth_token          \u001b[39m# required after you’ve accepted Meta’s license\u001b[39;49;00m\n\u001b[1;32m     14\u001b[0m     )\n\u001b[1;32m     16\u001b[0m     \u001b[39m# 2 Load model\u001b[39;00m\n\u001b[1;32m     17\u001b[0m     torch_dtype \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     18\u001b[0m                    \u001b[39m\"\u001b[39m\u001b[39mbf16\u001b[39m\u001b[39m\"\u001b[39m: torch\u001b[39m.\u001b[39mbfloat16,\n\u001b[1;32m     19\u001b[0m                    \u001b[39m\"\u001b[39m\u001b[39mfp16\u001b[39m\u001b[39m\"\u001b[39m: torch\u001b[39m.\u001b[39mfloat16}\u001b[39m.\u001b[39mget(dtype, \u001b[39mNone\u001b[39;00m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/llm_decode/lib/python3.9/site-packages/transformers/models/auto/tokenization_auto.py:1028\u001b[0m, in \u001b[0;36mAutoTokenizer.from_pretrained\u001b[0;34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[0m\n\u001b[1;32m   1025\u001b[0m tokenizer_class_py, tokenizer_class_fast \u001b[39m=\u001b[39m TOKENIZER_MAPPING[\u001b[39mtype\u001b[39m(config)]\n\u001b[1;32m   1027\u001b[0m \u001b[39mif\u001b[39;00m tokenizer_class_fast \u001b[39mand\u001b[39;00m (use_fast \u001b[39mor\u001b[39;00m tokenizer_class_py \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m):\n\u001b[0;32m-> 1028\u001b[0m     \u001b[39mreturn\u001b[39;00m tokenizer_class_fast\u001b[39m.\u001b[39;49mfrom_pretrained(pretrained_model_name_or_path, \u001b[39m*\u001b[39;49minputs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1029\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1030\u001b[0m     \u001b[39mif\u001b[39;00m tokenizer_class_py \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniconda3/envs/llm_decode/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:2046\u001b[0m, in \u001b[0;36mPreTrainedTokenizerBase.from_pretrained\u001b[0;34m(cls, pretrained_model_name_or_path, cache_dir, force_download, local_files_only, token, revision, trust_remote_code, *init_inputs, **kwargs)\u001b[0m\n\u001b[1;32m   2043\u001b[0m \u001b[39m# If one passes a GGUF file path to `gguf_file` there is no need for this check as the tokenizer will be\u001b[39;00m\n\u001b[1;32m   2044\u001b[0m \u001b[39m# loaded directly from the GGUF file.\u001b[39;00m\n\u001b[1;32m   2045\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mall\u001b[39m(full_file_name \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mfor\u001b[39;00m full_file_name \u001b[39min\u001b[39;00m resolved_vocab_files\u001b[39m.\u001b[39mvalues()) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m gguf_file:\n\u001b[0;32m-> 2046\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mEnvironmentError\u001b[39;00m(\n\u001b[1;32m   2047\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCan\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt load tokenizer for \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpretrained_model_name_or_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m. If you were trying to load it from \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2048\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhttps://huggingface.co/models\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, make sure you don\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt have a local directory with the same name. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2049\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mOtherwise, make sure \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpretrained_model_name_or_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is the correct path to a directory \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2050\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcontaining all relevant files for a \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m tokenizer.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   2051\u001b[0m     )\n\u001b[1;32m   2053\u001b[0m \u001b[39mfor\u001b[39;00m file_id, file_path \u001b[39min\u001b[39;00m vocab_files\u001b[39m.\u001b[39mitems():\n\u001b[1;32m   2054\u001b[0m     \u001b[39mif\u001b[39;00m file_id \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m resolved_vocab_files:\n",
-      "\u001b[0;31mOSError\u001b[0m: Can't load tokenizer for 'meta-llama/Llama-3.2-1B-Instruct'. If you were trying to load it from 'https://huggingface.co/models', make sure you don't have a local directory with the same name. Otherwise, make sure 'meta-llama/Llama-3.2-1B-Instruct' is the correct path to a directory containing all relevant files for a LlamaTokenizerFast tokenizer."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.10942436898492827, 0.10053771003512674, 0.11865446523197064)\n",
+      "(0.1685761047463175, 0.15502609038445705, 0.18244167776031484)\n"
      ]
     }
    ],
    "source": [
-    "MODEL_CACHE_DIR = \"/data/willett_data/llama\"\n",
-    "llm, llm_tokenizer = build_llama_1B(\n",
-    "cacheDir=MODEL_CACHE_DIR, device=\"auto\", load_in_8bit=True\n",
-    ")"
+    "print(llm_out['cer'])\n",
+    "print(llm_out['wer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1a9ee847dbe4c05bbc21db0ab0f1946",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3.2171875, 3.1532265625, 3.280942708333333) (3.08875, 3.029166666666667, 3.149177083333333)\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
