--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -63,33 +63,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUNNING IN N-GRAM MODE\n"
+     ]
+    }
+   ],
    "source": [
-    "output_file = 'obi'\n",
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
-    "if output_file == 'obi':\n",
-    "    model_storage_path = '/data/willett_data/outputs/'\n",
-    "elif output_file == 'leia':\n",
-    "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
-    "    \n",
-    "device = 'cuda:2'\n",
     "load_lm = True\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
     "blank_penalty = np.log(2)\n",
     "\n",
-    "not_loaded = True\n",
     "run_for_llm = False\n",
     "\n",
     "if run_for_llm:\n",
-    "    rescore_n_best = True\n",
-    "    rescore = True\n",
+    "    return_n_best = True\n",
+    "    rescore = False\n",
+    "    nbest = 100\n",
+    "    print(\"RUNNING IN LLM MODE\")\n",
     "else:\n",
-    "    rescore_n_best = False\n",
-    "    rescore = False"
+    "    return_n_best = False\n",
+    "    rescore = False\n",
+    "    nbest = 1\n",
+    "    print(\"RUNNING IN N-GRAM MODE\")\n",
+    "    \n",
+    "device = \"cuda:1\""
    ]
   },
   {
@@ -109,24 +115,23 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0509 22:41:11.173261 1260730 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0509 22:43:38.411578 1260730 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0510 17:50:31.338227 1316189 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0510 17:53:10.544240 1316189 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
    "source": [
-    "if load_lm and not_loaded: \n",
+    "if load_lm: \n",
     "        \n",
     "    lmDir = base_dir +'/lm/languageModel'\n",
     "    ngramDecoder = lmDecoderUtils.build_lm_decoder(\n",
     "        lmDir,\n",
     "        acoustic_scale=acoustic_scale, #1.2\n",
-    "        nbest=1,\n",
+    "        nbest=nbest,\n",
     "        beam=18\n",
     "    )\n",
     "    print(\"loaded LM\")\n",
-    "    \n",
-    "not_loaded = False"
+    "    "
    ]
   },
   {
@@ -140,25 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing to shared output file\n",
-      "gru_restricted_days_seed_0\n",
-      "/data/willett_data/ptDecoder_ctc\n",
       "Loading GRU\n",
-      "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n"
+      "RESTRICTED DAYS:  []\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1260730/93088782.py:176: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1316189/4107786914.py:199: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -166,70 +168,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model performance:  0.2801639636428444\n",
-      "gru_restricted_days_seed_0\n",
-      "/data/willett_data/ptDecoder_ctc\n",
+      "Model performance:  0.3821814050369248\n",
       "Loading GRU\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  0.30942282869260557\n",
-      "gru_restricted_days_seed_0\n",
-      "/data/willett_data/ptDecoder_ctc\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  0.38015527362242\n",
       "Loading GRU\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  0.2777777777777778\n",
-      "gru_restricted_days_seed_1\n",
-      "/data/willett_data/ptDecoder_ctc\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  0.3772202234425298\n",
       "Loading GRU\n",
-      "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  0.28123329174835143\n",
-      "gru_restricted_days_seed_1\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  0.31421722293933246\n",
-      "gru_restricted_days_seed_1\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  0.2757697456492637\n",
-      "gru_restricted_days_seed_2\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  0.2792728568882552\n",
-      "gru_restricted_days_seed_2\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  0.3162456205052554\n",
-      "gru_restricted_days_seed_2\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  0.2782797858099063\n",
-      "gru_restricted_days_seed_3\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [4, 5, 6, 7, 8]\n",
-      "Model performance:  0.2796292995900909\n",
-      "gru_restricted_days_seed_3\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [9, 10, 12, 13, 14]\n",
-      "Model performance:  0.311820025815969\n",
-      "gru_restricted_days_seed_3\n",
-      "/data/willett_data/ptDecoder_ctc\n",
-      "Loading GRU\n",
-      "RESTRICTED DAYS:  [15, 16, 17, 18, 19, 20]\n",
-      "Model performance:  0.2791164658634538\n"
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  0.38007953039197123\n"
      ]
     }
    ],
    "source": [
-    "models_to_run = ['neurips_gru_restricted_days_3', 'neurips_gru_restricted_days_2',\n",
-    "                 'neurips_gru_restricted_days']\n",
+    "output_file = 'obi'\n",
     "\n",
-    "shared_output_file = 'gru_restricted_days'\n",
+    "if output_file == 'obi':\n",
+    "    model_storage_path = '/data/willett_data/outputs/'\n",
+    "elif output_file == 'leia':\n",
+    "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
+    "    \n",
+    "models_to_run = ['gru_fully_held_out_days']\n",
+    "\n",
+    "shared_output_file = ''\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    print(\"Writing to shared output file\")\n",
@@ -237,17 +199,19 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds = 4\n",
-    "partition = \"competition\" # \"test\"\n",
-    "fill_max_day = False\n",
-    "run_lm = True\n",
+    "seeds_list = [0,1,2,3]\n",
+    "partition = \"test\" # \"test\"\n",
+    "run_lm = False\n",
+    "\n",
+    "fill_max_day = True\n",
+    "\n",
     "\n",
     "if partition == 'test':\n",
     "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions/\"\n",
     "else:\n",
     "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions_comp/\"\n",
     "    \n",
-    "for seed in range(seeds):\n",
+    "for seed in seeds_list:\n",
     "    \n",
     "    for model_name_str in models_to_run:\n",
     "        \n",
@@ -261,16 +225,26 @@
     "            \n",
     "        with open(modelPath + \"/args\", \"rb\") as handle:\n",
     "            args = pickle.load(handle)\n",
-    "        \n",
+    "            \n",
     "        if args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both':\n",
     "            data_file = '/data/willett_data/ptDecoder_ctc_both'\n",
+    "            \n",
     "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data':\n",
     "            data_file = '/data/willett_data/ptDecoder_ctc'\n",
+    "            \n",
+    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days':\n",
+    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days'\n",
+    "            \n",
+    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days_1':\n",
+    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days_1'\n",
+    "            \n",
+    "            \n",
+    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days_2':\n",
+    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days_2'\n",
+    "            \n",
     "        else:\n",
     "            data_file = args['datasetPath']\n",
     "            \n",
-    "        print(data_file)\n",
-    "        \n",
     "        trainLoaders, testLoaders, loadedData = getDatasetLoaders(\n",
     "            data_file, 8\n",
     "        )\n",
@@ -350,8 +324,11 @@
     "        total_seq_length = 0\n",
     "\n",
     "        if partition == \"competition\":\n",
+    "            \n",
     "            testDayIdxs = [4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 18, 19, 20]\n",
+    "                \n",
     "        elif partition == \"test\":\n",
+    "            \n",
     "            testDayIdxs = range(len(loadedData[partition])) \n",
     "            \n",
     "        ground_truth_sentences = []\n",
@@ -370,6 +347,7 @@
     "                    test_ds, batch_size=1, shuffle=False, num_workers=0\n",
     "                )\n",
     "                \n",
+    "                \n",
     "                for j, (X, y, X_len, y_len, _) in enumerate(test_loader):\n",
     "                            \n",
     "                    X, y, X_len, y_len, dayIdx = (\n",
@@ -382,7 +360,7 @@
     "                    \n",
     "                    if fill_max_day:\n",
     "                        dayIdx.fill_(args['maxDay'])\n",
-    "                        \n",
+    "                                                \n",
     "                    pred = model.forward(X, X_len, dayIdx)\n",
     "                    \n",
     "                    if hasattr(model, 'compute_length'):\n",
@@ -391,6 +369,7 @@
     "                        adjustedLens = ((X_len - model.kernelLen) / model.strideLen).to(torch.int32)\n",
     "                        \n",
     "                    for iterIdx in range(pred.shape[0]):\n",
+    "                        \n",
     "                        trueSeq = np.array(y[iterIdx][0 : y_len[iterIdx]].cpu().detach())\n",
     "                        model_outputs[\"logits\"].append(pred[iterIdx].cpu().detach().numpy())\n",
     "                        \n",
@@ -445,7 +424,7 @@
     "                        ngramDecoder,\n",
     "                        logits[0],\n",
     "                        blankPenalty=blank_penalty,\n",
-    "                        returnNBest=rescore_n_best,\n",
+    "                        returnNBest=return_n_best,\n",
     "                        rescore=rescore,\n",
     "                    )\n",
     "                    \n",
@@ -456,10 +435,10 @@
     "                \n",
     "                if run_for_llm:\n",
     "                    print(\"SAVING OUTPUTS FOR LLM\")\n",
-    "                    with open(f\"{saveFolder_transcripts}transcript.pkl\", \"wb\") as f:\n",
-    "                        pickle.dump(model_outputs[\"transcriptions\"], f)\n",
+    "                    with open(f\"{saveFolder_transcripts}{model_name_str}_seed_{seed}_model_outputs.pkl\", \"wb\") as f:\n",
+    "                        pickle.dump(model_outputs, f)\n",
     "                        \n",
-    "                    with open(f\"{saveFolder_transcripts}{model_name_str}.pkl\", \"wb\") as f:\n",
+    "                    with open(f\"{saveFolder_transcripts}{model_name_str}_seed_{seed}_nbest.pkl\", \"wb\") as f:\n",
     "                        pickle.dump(nbest_outputs, f)\n",
     "                    \n",
     "                else:\n",
@@ -480,9 +459,7 @@
     "                    out_file = os.path.join(saveFolder_transcripts, output_file)   # no extension per your spec\n",
     "                    \n",
     "                    with open(out_file + '.txt', write_mode, encoding=\"utf-8\") as f:\n",
-    "                        f.write(\"\\n\".join(nbest_outputs)+ \"\\n\")   # one line per LLM output\n",
-    "                        \n",
-    "                    "
+    "                        f.write(\"\\n\".join(nbest_outputs)+ \"\\n\")   # one line per LLM output  "
    ]
   },
   {
