--- a/src/neural_decoder/cffan_lm.ipynb
+++ b/src/neural_decoder/cffan_lm.ipynb
@@ -145,13 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Writing to shared output file\n",
+      "gru_held_out_days_seed_0\n",
       "Loading GRU\n",
       "RESTRICTED DAYS:  []\n"
      ]
@@ -160,7 +162,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1316189/4107786914.py:199: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_1316189/3668896128.py:202: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -168,16 +170,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model performance:  0.3821814050369248\n",
+      "Model performance:  2.218125\n",
+      "gru_held_out_days_seed_0\n",
       "Loading GRU\n",
       "RESTRICTED DAYS:  []\n",
-      "Model performance:  0.38015527362242\n",
+      "Model performance:  2.8053125\n",
+      "gru_held_out_days_seed_0\n",
       "Loading GRU\n",
       "RESTRICTED DAYS:  []\n",
-      "Model performance:  0.3772202234425298\n",
+      "Model performance:  2.853125\n",
+      "gru_held_out_days_seed_1\n",
       "Loading GRU\n",
       "RESTRICTED DAYS:  []\n",
-      "Model performance:  0.38007953039197123\n"
+      "Model performance:  2.1496875\n",
+      "gru_held_out_days_seed_1\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.8084375\n",
+      "gru_held_out_days_seed_1\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.8425\n",
+      "gru_held_out_days_seed_2\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.201875\n",
+      "gru_held_out_days_seed_2\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.7828125\n",
+      "gru_held_out_days_seed_2\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.8540625\n",
+      "gru_held_out_days_seed_3\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.2075\n",
+      "gru_held_out_days_seed_3\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.773125\n",
+      "gru_held_out_days_seed_3\n",
+      "Loading GRU\n",
+      "RESTRICTED DAYS:  []\n",
+      "Model performance:  2.87625\n"
      ]
     }
    ],
@@ -189,9 +226,9 @@
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "    \n",
-    "models_to_run = ['gru_fully_held_out_days']\n",
+    "models_to_run = ['gru_held_out_days_2_redo', 'gru_held_out_days_1_redo', 'gru_held_out_days_redo']\n",
     "\n",
-    "shared_output_file = ''\n",
+    "shared_output_file = 'gru_held_out_days'\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    print(\"Writing to shared output file\")\n",
@@ -200,8 +237,8 @@
     "    write_mode = \"w\"\n",
     "    \n",
     "seeds_list = [0,1,2,3]\n",
-    "partition = \"test\" # \"test\"\n",
-    "run_lm = False\n",
+    "partition = \"competition\" # \"test\"\n",
+    "run_lm = True\n",
     "\n",
     "fill_max_day = True\n",
     "\n",
@@ -325,7 +362,10 @@
     "\n",
     "        if partition == \"competition\":\n",
     "            \n",
-    "            testDayIdxs = [4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 18, 19, 20]\n",
+    "            if fill_max_day:\n",
+    "                testDayIdxs = np.arange(5)\n",
+    "            else:\n",
+    "                testDayIdxs = [4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 18, 19, 20]\n",
     "                \n",
     "        elif partition == \"test\":\n",
     "            \n",
